<resources>
    <string name="app_name">Project_velo_cyraptor</string>

    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_course_details">Run Detail</string>
    <string name="activity_bike_section_title">Bike</string>
    <string name="activity_stats_path_section_title">Paths</string>
    <string name="activity_run_section_title">Run</string>
    <string name="title_activity_trajet_detail">Path Detail</string>

    <string name="step_counter">android.hardware.sensor.stepcounter</string>
    <string name="step_detector">android.hardware.sensor.stepdetector</string>

    <string name="activity_run_dialog_gps_cancel">Cancel</string>
    <string name="activity_run_dialog_gps_message">Your GPS seems to be disabled</string>
    <string name="activity_run_dialog_gps_settings">Go to settings to enable the GPS</string>

    <string name="activity_bike_btn_start">Start a bike run</string>

    <string name="activity_run_btn_start">Start a run</string>
    <string name="activity_run_btn_pause">Pause</string>
    <string name="activity_run_btn_stop">Stop</string>
    <string name="activity_run_btn_resume">Resume</string>
    <string name="activity_run_btn_path">Select a path</string>
    <string name="activity_run_btn_path_name">Path : %s</string>
    <string name="activity_run_lbl_steps_defaut">0</string>
    <string name="activity_run_lbl_calories_defaut">0</string>
    <string name="activity_run_lbl_vitesse_defaut">0.0 km/h</string>
    <string name="activity_run_lbl_vitesse_valeur">%.1f km/h</string>
    <string name="activity_run_lbl_distance_valeur">%.1f km</string>
    <string name="activity_run_lbl_distance_defaut">0.0 km</string>
    <string name="activity_run_lbl_steps">Steps :</string>
    <string name="activity_run_lbl_calories">Calories :</string>
    <string name="activity_run_lbl_vitesse">Avg speed :</string>
    <string name="activity_run_lbl_distance">Distance :</string>
    <string name="activity_run_chrono_default">00:00:00</string>
    <string name="activity_run_path_selection_title">Path selection</string>
    <string name="activity_run_path_selection_cancel">Cancel</string>
    <string name="activity_run_path_selection_none">None</string>
    <string name="activity_run_path_selection_ok">Ok</string>
    <string name="activity_run_path_selection_no_path">No path to select</string>
    <string name="activity_run_path_creation_title">New path</string>
    <string name="activity_run_path_creation_message">Do you want to save this run as a path?</string>
    <string name="activity_run_path_creation_placeholder">Path name</string>
    <string name="activity_run_path_creation_yes">Yes</string>
    <string name="activity_run_path_creation_no">No</string>
    <string name="activity_run_menu_musique">Music</string>
    <string name="activity_run_toast_location_not_ready">Location is not ready yet, try again in a few seconds</string>
    <string name="activity_run_path_mise_a_jour_title">New highscore</string>
    <string name="activity_run_path_mise_a_jour_message">It seems you beat the best time for this path, do you want to
        have your time be the new highscore?
    </string>
    <string name="activity_run_path_mise_a_jour_yes">Yes</string>
    <string name="activity_run_path_mise_a_jour_no">No</string>

    <string name="activity_history_confirm_yes">Yes</string>
    <string name="activity_history_confirm_no">No</string>
    <string name="activity_history_confirm_title">Clear history</string>
    <string name="activity_history_confirm_message">Are you sure you want to clear the entire history of this running
        type?
    </string>
    <string name="menu_history_clear">Clear history</string>
    <string name="menu_history_sort">Sort history</string>
    <string name="activity_history_dialog_title">Sort the history</string>
    <string name="activity_history_dialog_cancel">Cancel</string>
    <string name="activity_history_dialog_sort_date">By date</string>
    <string name="activity_history_dialog_sort_trajet">By path</string>
    <string name="activity_history_dialog_sort_duree">By duration</string>
    <string name="activity_history_dialog_sort_distance">By distance</string>

    <string name="activity_profile_lbl_invite_age">Age :</string>
    <string name="activity_profile_lbl_invite_poids">Weight (kilograms):</string>
    <string name="activity_profile_lbl_invite_taille">Height (centimeters):</string>
    <string name="activity_profile_lbl_invite_sexe">Sex :</string>
    <string name="activity_profile_btn_save">Save changes</string>

    <string name="activity_course_unite_temps">minutes</string>
    <string name="activity_course_menu_suppr">Delete</string>
    <string name="activity_course_dialog_suppr_title">Delete run</string>
    <string name="activity_course_dialog_suppr_message">Are you sure to delete this run?</string>
    <string name="activity_course_dialog_suppr_yes">Yes</string>
    <string name="activity_course_dialog_suppr_no">No</string>

    <string name="content_course_lbl_date_defaut">00/00/2000</string>
    <string name="content_course_lbl_duree_defaut">%.2f min</string>
    <string name="content_course_lbl_duree_invite">Duration :</string>
    <string name="content_course_lbl_distance_defaut">%.2f km</string>
    <string name="content_course_lbl_distance_invite">Distance :</string>
    <string name="content_course_lbl_speed_defaut">%.2f km/h</string>
    <string name="content_course_lbl_speed_invite">Average speed :</string>
    <string name="content_course_lbl_calories_defaut">0</string>
    <string name="content_course_lbl_calories_invite">Calories :</string>
    <string name="content_course_lbl_steps_defaut">0</string>
    <string name="content_course_lbl_steps_invite">Steps :</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_history">History</string>
    <string name="nav_stats">Statistics</string>
    <string name="nav_profil">Profile</string>
    <string name="activity_run_path_selection_positive">Select</string>

    <string name="activity_profile_spn_sexe_indetermine">Undetermined</string>
    <string name="activity_profile_spn_sexe_masculin">Man</string>
    <string name="activity_profile_spn_sexe_feminin">Woman</string>
    <string name="activity_profile_tst_save_success">Saved successfully</string>
    <string name="activity_profile_tst_save_failure">Saving failure</string>
    <string name="title_activity_statistics">Statistics</string>

    <string name="fragment_stats_lbl_vitesse_avg">Avg speed :</string>
    <string name="fragment_stats_lbl_duree_totale">Total duration :</string>
    <string name="fragment_stats_lbl_duree_avg">Avg duration :</string>
    <string name="fragment_stats_lbl_distance_totale">Total distance :</string>
    <string name="fragment_stats_lbl_distance_avg">Avg distance :</string>
    <string name="fragment_stats_lbl_pas_totaux">Total steps :</string>
    <string name="fragment_stats_lbl_pas_avg">Avg steps :</string>
    <string name="fragment_stats_lbl_calories_totales">Total calories :</string>
    <string name="fragment_stats_lbl_calories_avg">Avg calories :</string>
    <string name="fragment_stats_lbl_duree_defaut">%.2f min</string>
    <string name="fragment_stats_lbl_distance_defaut">%.2f km</string>
    <string name="fragment_stats_lbl_vitesse_defaut">%.2f km/h</string>

    <string name="fragment_stats_trajet_lbl_vitesse_avg">Avg speed :</string>
    <string name="fragment_stats_trajet_lbl_duree_totale">Total duration :</string>
    <string name="fragment_stats_trajet_lbl_duree_avg">Avg duration :</string>
    <string name="fragment_stats_trajet_lbl_calories_totales">Total calories :</string>
    <string name="fragment_stats_trajet_lbl_calories_avg">Avg calories :</string>
    <string name="fragment_stats_trajet_lbl_distance">Path distance :</string>
    <string name="fragment_stats_trajet_lbl_count">Times ran :</string>
    <string name="fragment_stats_trajet_lbl_nom_defaut">Nom trajet</string>
    <string name="fragment_stats_trajet_lbl_duree_defaut">%.2f min</string>
    <string name="fragment_stats_trajet_lbl_distance_defaut">%.2f km</string>
    <string name="fragment_stats_trajet_lbl_vitesse_defaut">%.2f km/h</string>
    <string name="fragment_stats_trajet_menu_suppr">Delete</string>
    <string name="fragment_stats_trajet_dialog_suppr_title">Delete path</string>
    <string name="fragment_stats_trajet_dialog_suppr_message">Are you sure to delete this path?</string>
    <string name="fragment_stats_trajet_dialog_suppr_yes">Yes</string>
    <string name="fragment_stats_trajet_dialog_suppr_no">No</string>
</resources>
