<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="ca.qc.bdeb.p55.tp2.project_velo_cyraptor.view.statistics.StatisticsFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.10"
            android:orientation="vertical">

        <Space android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.05"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:layout_weight="1" android:orientation="horizontal">
            <TextView android:id="@+id/textView5" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1"
                      android:gravity="center_horizontal"
                      android:text="@string/fragment_stats_lbl_duree_totale"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:textSize="26sp"/>
            <TextView android:id="@+id/stats_fragment_lbl_duree_totale"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1"
                      android:gravity="center_horizontal"
                      android:text="@string/fragment_stats_lbl_duree_defaut"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:textSize="26sp"/>
        </LinearLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.05"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"
                      android:orientation="horizontal">
            <TextView android:id="@+id/textView6" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_horizontal"
                      android:text="@string/fragment_stats_lbl_duree_avg"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
            <TextView android:id="@+id/stats_fragment_lbl_duree_avg" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_horizontal"
                      android:text="@string/fragment_stats_lbl_duree_defaut"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
        </LinearLayout>
        <Space android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.05"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/fragment_stats_lbl_distance_totale"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="26sp"/>

            <TextView
                    android:id="@+id/stats_fragment_lbl_distance_totale"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/fragment_stats_lbl_distance_defaut"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="26sp"/>

        </LinearLayout>

        <Space android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.05"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"
                      android:orientation="horizontal">
            <TextView android:id="@+id/textView8" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_horizontal"
                      android:text="@string/fragment_stats_lbl_distance_avg"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
            <TextView android:id="@+id/stats_fragment_lbl_distance_avg" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_horizontal"
                      android:text="@string/fragment_stats_lbl_distance_defaut"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
        </LinearLayout>

        <Space android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.05"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:layout_weight="1" android:orientation="horizontal">
            <TextView android:id="@+id/textView10" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_horizontal"
                      android:text="@string/fragment_stats_lbl_vitesse_avg"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
            <TextView android:id="@+id/stats_fragment_lbl_vitesse_avg" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_horizontal"
                      android:text="@string/fragment_stats_lbl_vitesse_defaut"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
        </LinearLayout>
        <Space android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.05"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/fragment_stats_lbl_calories_totales"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="26sp"/>

            <TextView
                    android:id="@+id/stats_fragment_lbl_calories_totaux"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/content_course_lbl_calories_defaut"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="26sp"/>
        </LinearLayout>

        <Space android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.05"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1"
                      android:orientation="horizontal">
            <TextView android:id="@+id/textView12" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_horizontal"
                      android:text="@string/fragment_stats_lbl_calories_avg"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
            <TextView android:id="@+id/stats_fragment_lbl_calories_avg" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_horizontal"
                      android:text="@string/content_course_lbl_calories_defaut"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
        </LinearLayout>
        <Space android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.05"/>
        <LinearLayout android:id="@+id/stats_fragment_lay_pas_totaux" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1" android:orientation="horizontal">
            <TextView android:id="@+id/textView14" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_horizontal"
                      android:text="@string/fragment_stats_lbl_pas_totaux"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
            <TextView android:id="@+id/stats_fragment_lbl_pas_totaux" android:layout_width="match_parent"
                      android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_horizontal"
                      android:text="@string/content_course_lbl_steps_defaut"
                      android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
        </LinearLayout>
        <Space android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.05"
               android:id="@+id/stats_fragment_spc_pas_1"/>
        <LinearLayout
                android:id="@+id/stats_fragment_lay_pas_avg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/content_course_lbl_steps_invite"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="26sp"/>

            <TextView
                    android:id="@+id/stats_fragment_lbl_pas_avg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/content_course_lbl_steps_defaut"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="26sp"/>
        </LinearLayout>
        <Space android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.05"
               android:id="@+id/stats_fragment_spc_pas_2"/>
    </LinearLayout>

</FrameLayout>
