<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="ca.qc.bdeb.p55.tp2.project_velo_cyraptor.view.statistics.TrajetDetail"
            android:orientation="vertical"
            android:padding="@dimen/abc_action_bar_overflow_padding_start_material">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Space android:layout_width="match_parent" android:layout_height="@dimen/abc_action_bar_overflow_padding_start_material" android:layout_weight="0.5"/>
            <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                      android:id="@+id/stats_fragment_trajet_lbl_nom"
                      android:gravity="fill_vertical|center_horizontal" android:textSize="30sp"
                      android:text="@string/fragment_stats_trajet_lbl_nom_defaut" android:textColor="@android:color/black"
                      android:layout_weight="1"/>
            <Space android:layout_width="match_parent" android:layout_height="@dimen/abc_action_bar_overflow_padding_start_material" android:layout_weight="0.5"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="horizontal" android:layout_weight="1">
                <TextView android:id="@+id/textView8" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_horizontal"
                          android:text="@string/fragment_stats_trajet_lbl_distance"
                          android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
                <TextView android:id="@+id/stats_fragment_trajet_lbl_path_distance" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_horizontal"
                          android:text="@string/fragment_stats_lbl_distance_defaut"
                          android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
            </LinearLayout>
            <Space android:layout_width="match_parent" android:layout_height="@dimen/abc_action_bar_overflow_padding_start_material" android:layout_weight="0.5"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" android:layout_weight="1">

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/fragment_stats_trajet_lbl_count"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="26sp"/>

                <TextView
                        android:id="@+id/stats_fragment_trajet_lbl_count"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="26sp" android:text="0"/>

            </LinearLayout>
            <Space android:layout_width="match_parent" android:layout_height="@dimen/abc_action_bar_overflow_padding_start_material" android:layout_weight="0.5"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="horizontal" android:layout_weight="1">
                <TextView android:id="@+id/textView5" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_horizontal"
                          android:text="@string/fragment_stats_lbl_duree_totale"
                          android:textAppearance="?android:attr/textAppearanceMedium"
                          android:textSize="26sp"/>
                <TextView android:id="@+id/stats_fragment_trajet_lbl_duree_totale"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_horizontal"
                          android:text="@string/fragment_stats_lbl_duree_defaut"
                          android:textAppearance="?android:attr/textAppearanceMedium"
                          android:textSize="26sp"/>
            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/abc_action_bar_overflow_padding_start_material"
                    android:layout_weight="0.5"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="horizontal" android:layout_weight="1">
                <TextView android:id="@+id/textView6" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_horizontal"
                          android:text="@string/fragment_stats_trajet_lbl_duree_avg"
                          android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
                <TextView android:id="@+id/stats_fragment_trajet_lbl_duree_avg" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_horizontal"
                          android:text="@string/fragment_stats_lbl_duree_defaut"
                          android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
            </LinearLayout>

            <Space android:layout_width="match_parent" android:layout_height="@dimen/abc_action_bar_overflow_padding_start_material" android:layout_weight="0.5"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="horizontal" android:layout_weight="1">
                <TextView android:id="@+id/textView10" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_horizontal"
                          android:text="@string/fragment_stats_trajet_lbl_vitesse_avg"
                          android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
                <TextView android:id="@+id/stats_fragment_trajet_lbl_vitesse_avg" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_horizontal"
                          android:text="@string/fragment_stats_lbl_vitesse_defaut"
                          android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
            </LinearLayout>
            <Space android:layout_width="match_parent" android:layout_height="@dimen/abc_action_bar_overflow_padding_start_material" android:layout_weight="0.5"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" android:layout_weight="1">

                <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/fragment_stats_trajet_lbl_calories_totales"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="26sp"/>

                <TextView
                        android:id="@+id/stats_fragment_trajet_lbl_calories_totaux"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/content_course_lbl_calories_defaut"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="26sp"/>
            </LinearLayout>

            <Space android:layout_width="match_parent" android:layout_height="@dimen/abc_action_bar_overflow_padding_start_material" android:layout_weight="0.5"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="horizontal" android:layout_weight="1">
                <TextView android:id="@+id/textView12" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_horizontal"
                          android:text="@string/fragment_stats_trajet_lbl_calories_avg"
                          android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
                <TextView android:id="@+id/stats_fragment_trajet_lbl_calories_avg" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:layout_weight="1"
                          android:gravity="center_horizontal"
                          android:text="@string/content_course_lbl_calories_defaut"
                          android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="26sp"/>
            </LinearLayout>
            <Space android:layout_width="match_parent" android:layout_height="@dimen/abc_action_bar_overflow_padding_start_material" android:layout_weight="0.5"/>
        </LinearLayout>
    </ScrollView>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/stats_fragment_trajet_map"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              tools:context=".view.history.CourseDetails"/>

</LinearLayout>
